--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="spacex.png" id="main-logo">
-    <h1>Join the <u>exploration</u></h1>
-    <button class="btn">Apply</button>
+    <div id="hero">
+        <img src="spacex.png" id="main-logo">
+        <h1 id="title">Join the <span class="underline">exploration</span></h1>
+        <button class="btn">Apply</button>
+    </div>
+    <h3>Terms and conditions apply</h3>
 </body>
 </html>
